// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(ContainerComponent)
  draggable={false}
  eventHandlers={
    Object {
      "dragend": [Function],
      "dragstart": [Function],
    }
  }
  icon={
    NewClass {
      "_initHooksCalled": true,
      "options": Object {
        "iconAnchor": Array [
          12.5,
          41,
        ],
        "iconSize": Array [
          25,
          41,
        ],
        "iconUrl": "default.png",
        "popupAnchor": Array [
          0,
          -36,
        ],
        "shadowUrl": "marker-shadow.png",
        "tooltipAnchor": Array [
          0,
          -36,
        ],
      },
    }
  }
  position={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
/>
`;

exports[`Shallow Snapshot Tests variant red 1`] = `
<ForwardRef(ContainerComponent)
  draggable={false}
  eventHandlers={
    Object {
      "dragend": [Function],
      "dragstart": [Function],
    }
  }
  icon={
    NewClass {
      "_initHooksCalled": true,
      "options": Object {
        "iconAnchor": Array [
          12.5,
          41,
        ],
        "iconSize": Array [
          25,
          41,
        ],
        "iconUrl": "red.png",
        "popupAnchor": Array [
          0,
          -36,
        ],
        "shadowUrl": "marker-shadow.png",
        "tooltipAnchor": Array [
          0,
          -36,
        ],
      },
    }
  }
  position={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
/>
`;

exports[`Shallow Snapshot Tests with popup 1`] = `
<ForwardRef
  autoOpen={false}
  draggable={false}
  eventHandlers={
    Object {
      "dragend": [Function],
      "dragstart": [Function],
    }
  }
  icon={
    NewClass {
      "_initHooksCalled": true,
      "options": Object {
        "iconAnchor": Array [
          12.5,
          41,
        ],
        "iconSize": Array [
          25,
          41,
        ],
        "iconUrl": "default.png",
        "popupAnchor": Array [
          0,
          -36,
        ],
        "shadowUrl": "marker-shadow.png",
        "tooltipAnchor": Array [
          0,
          -36,
        ],
      },
    }
  }
  map={Object {}}
  popup="popup-text"
  position={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
/>
`;
